--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,16 +4,18 @@
 @import "../node_modules/animate.css/animate.css";
 
 
+
+
 //Bootstrap Custom
 $navbar-nav-link-padding-x: 2rem;
 $font-family-sans-serif:Poppins;
-$headings-font-family: Lora;
 $font-size-base: 0.9rem;
 
 $body-bg: hsl(19, 100%, 96%);
+$body-color:hsl(19, 16%, 35%);
 
 $primary:hsl(19, 64%, 54%);
-$light:hsl(19, 8%, 55%);
+
 
 $btn-border-radius: 2rem;
 $btn-padding-x: 1.5rem;
@@ -39,6 +41,18 @@ $spacers: (
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
+body{
+    height: 3000px;
+}
+
+.title{
+    font-family:Lora;
+    color: hsl(19, 16%, 15%);;
+}
+
+.sub-title{
+    font-family: "Dancing Script", cursive;
+}
 //Custom Css
 .navbar-brand-logo{
     height: 2rem;
@@ -55,4 +69,25 @@ $spacers: (
 
 .home-title img{
     height: 50px;
+}
+
+.dish-card{
+   background-color: hsl(19, 100%, 97%);
+}
+
+.dish-card img{
+    transform: translateY(-50px);
+    transition: 0.5s;
+}
+
+.dish-card img:hover{
+    transform: translateY(-60px);
+}
+
+.footer-card{
+    display: flex;
+    justify-content: end;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
